--- a/templates/santa/application/run_slack.html.twig
+++ b/templates/santa/application/run_slack.html.twig
@@ -38,7 +38,7 @@
 
 {% block big_santa_warning %}
     For Secret Santa with a lot of participants, the final step (send Slack private messages)
-    can take some time (up to 20 sec).<br />
+    can take some time (up to 20 secondes).<br />
     Don't worry, in case something goes wrong, a "Retry" button will allow you to send remaining
     messages.
 {% endblock %}
