--- a/public/style.css
+++ b/public/style.css
@@ -635,8 +635,17 @@ textarea {
     display: flex;
     align-items: center;
 }
+.user-list .no-result {
+    min-height: 2.5em;
+    vertical-align: middle;
+    display: flex;
+    align-items: center;
+    color: #7A7A7A;
+    padding: 0 1em;
+}
 .user-list.hide-restricted .user-item.restricted,
-.user-list.hide-not-matching .user-item.not-matching {
+.user-list.hide-not-matching .user-item.not-matching,
+.user-list .no-result.is-hidden {
     display: none;
 }
 .user-list .user-item:hover {
