--- a/templates/santa/application/run_discord.html.twig
+++ b/templates/santa/application/run_discord.html.twig
@@ -29,5 +29,12 @@
             <img src="{{ user.extra.image }}" alt="{{ user.name }}" />
         {% endif %}
         <span>{{ user.name }}{% if user.extra.nickname %} ({{ user.extra.nickname }}){% endif %}</span>
+        {% if groups %}
+            <span class="user-groups">
+                {% for group in groups if user.identifier in group.userIds %}
+                    <span class="user-group">{{ group.name }}</span>
+                {% endfor %}
+            </span>
+        {% endif %}
     </label>
 {% endblock %}
