--- a/templates/santa/application/run_slack.html.twig
+++ b/templates/santa/application/run_slack.html.twig
@@ -27,5 +27,12 @@
         >
         <img src="{{ user.extra.image }}" alt="{{ user.name }}" />
         <span>{{ user.name }} ({{ user.extra.nickname }})</span>
+        {% if groups %}
+            <span class="user-groups">
+                {% for group in groups if user.identifier in group.userIds %}
+                    <span class="user-group">{{ group.name }}</span>
+                {% endfor %}
+            </span>
+        {% endif %}
     </label>
 {% endblock %}
